Archivos css/plugin, Se agrego tipografia archivo estilo.css

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,14 @@
+@font-face {
+	font-family: "Imprima";
+	src: url("../font/Imprima-Regular.ttf");
+	font-weight: normal;
+	font-style: normal;
+}
 body {
     background-image: url('../assets/fondos/fondo.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    font-family: "Imprima";
 }
